# qgis-stac-plugin

./: README.md  admin.py  pyproject.toml
src/qgis_stac/: main.py
src/qgis_stac/definitions/: catalog.py
src/qgis_stac/ui/: qgis_stac_main.ui
src/qgis_stac_plugin_x/gui/: qgis_stac_widget.py
test/: test_settings_manager.py  test_stac_api_client.py
